fixed background-color and z-index on nav. fixed column issue on portfolio

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -43,6 +43,7 @@ header {
   padding: 0;
   -webkit-transition: ease-in-out 500ms;
   transition: ease-in-out 500ms;
+  z-index: 1;
 }
 
 .navbar .nav-item:not(:last-child) {
@@ -78,6 +79,13 @@ header {
   transition: ease-in-out 300ms;
 }
 
+#navbarNav {
+  background-color: #fff;
+  border: #ddd 1px solid;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
 .footer {
   color: #fff;
   background-color: #666;
@@ -93,10 +101,10 @@ header {
 }
 
 .portfolio-item {
-  display: inline-block;
+  display: block;
   height: 200px;
   width: 250px;
-  margin: 20px;
+  margin: 20px auto;
   border: #666 1px solid;
 }
 
